--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,14 @@
     color: black;
     font-size: 10px;
 }
+.calc_button_box{
+  place-self: center;
+  padding: 10px;
+  padding-left: 92px;
+  padding-right: 92px;
+  border-radius: 10px;
+  background: linear-gradient(to right, #6fa1ff, #ffffff);
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
