--- a/src/components/Estimator.css
+++ b/src/components/Estimator.css
@@ -4,7 +4,7 @@
   padding: 40px;
   border-radius: 10px;
   max-width: 700px;
-  background: #ff7300;
+  background: linear-gradient(to right, #6fa1ff, #ffffff);;
   display:flex;
   flex-direction: column;
   align-items: center;
