--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
     justify-content: center;
     min-height: 100vh;
 }
+.wrapper {
+    display: flex;
+    justify-content: center;
+}
 .title{
     font-family: Raleway;
     text-align: center;
@@ -26,4 +30,9 @@
   display:flex;
   flex-direction: column;
   align-items: center;
+}
+.chart_box{
+    width: 1000px;
+    height: 1000px;
+    justify-content: center;
 }
