--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@
     justify-content: center;
     min-height: 100vh;
 }
+.input_box {
+    border-radius: 40px;
+    padding-left: 25px;
+    background-color: #ff0000;
+}
 .wrapper {
     display: flex;
     justify-content: center;
@@ -20,16 +25,28 @@
     color: black;
     font-size: 10px;
 }
+.search-bar{
+    display:flex;
+    align-items: center;
+    gap: 12px;
+}
+.search-bar input{
+    height: 50px;
+    border-radius: 40px;
+    padding-left: 25px;
+    color: #808080;
+    background-color: #ffffff;
+    font-size: 18px;
+}
 .calc_button_box{
-  place-self: center;
-  padding: 10px;
-  padding-left: 92px;
-  padding-right: 92px;
-  border-radius: 10px;
-  background: linear-gradient(to right, #6fa1ff, #ffffff);
-  display:flex;
-  flex-direction: column;
-  align-items: center;
+    font-family: Raleway;
+    text-align: center;
+    color: black;
+    font-size: 30px;
+    place-self: center;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
 }
 .chart_box{
     width: 1000px;
