--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,9 @@
     min-height: 100vh;
 }
 .input_box {
-    border-radius: 40px;
-    padding-left: 25px;
-    background-color: #ff0000;
+    padding: 25px;
+    background: linear-gradient(to bottom,#0059ff,#181cff);
+    border-radius: 30px;
 }
 .wrapper {
     display: flex;
@@ -16,24 +16,20 @@
 .title{
     font-family: Raleway;
     text-align: center;
-    color: black;
+    color: rgb(255, 255, 255);
     font-size: 50px;
 }
 .disclaimer {
     font-family: Raleway;
     text-align: center;
-    color: black;
+    color: rgb(255, 255, 255);
     font-size: 10px;
 }
 .search-bar{
     display:flex;
     align-items: center;
-    gap: 12px;
 }
 .search-bar input{
-    height: 50px;
-    border-radius: 40px;
-    padding-left: 25px;
     color: #808080;
     background-color: #ffffff;
     font-size: 18px;
@@ -41,15 +37,15 @@
 .calc_button_box{
     font-family: Raleway;
     text-align: center;
-    color: black;
-    font-size: 30px;
+    color: rgb(255, 255, 255);
+    font-size: 20px;
     place-self: center;
     display:flex;
     flex-direction: column;
     align-items: center;
 }
 .chart_box{
-    width: 1000px;
-    height: 1000px;
+    width: 800px;
+    height: 850px;
     justify-content: center;
 }
