--- a/src/components/Intake.css
+++ b/src/components/Intake.css
@@ -7,24 +7,20 @@
 }
 .intake_text{
   font-family: Raleway;
-  color: black;
-  font-size: 50px;
+  color: rgb(255, 255, 255);
+  font-size: 30px;
 }
 .search-bar{
     display:flex;
     align-items: center;
-    gap: 12px;
 }
 .search-bar input{
-    height: 50px;
-    border-radius: 40px;
-    padding-left: 25px;
     color: #808080;
     background-color: #ffffff;
-    font-size: 18px;
+    font-size: 15px;
 }
 .calories_gained{
   font-family: Raleway;
-  color: black;
+  color: rgb(255, 255, 255);
   font-size: 20px;
 }
