--- a/src/components/Loss.css
+++ b/src/components/Loss.css
@@ -7,8 +7,8 @@
 }
 .loss_text{
   font-family: Raleway;
-  color: black;
-  font-size: 50px;
+  color: rgb(255, 255, 255);
+  font-size: 30px;
 }
 .search-bar{
     display:flex;
@@ -16,15 +16,12 @@
     gap: 12px;
 }
 .search-bar input{
-    height: 50px;
-    border-radius: 40px;
-    padding-left: 25px;
     color: #808080;
     background-color: #ffffff;
     font-size: 18px;
 }
 .calories_lost{
   font-family: Raleway;
-  color: black;
+  color: rgb(252, 252, 252);
   font-size: 20px;
 }
