--- a/src/components/OtherInfo.css
+++ b/src/components/OtherInfo.css
@@ -7,8 +7,8 @@
 }
 .title_text{
     font-family: Raleway;
-    color: black;
-    font-size: 50px;
+    color: rgb(255, 255, 255);
+    font-size: 30px;
 }
 .search-bar{
     display:flex;
@@ -16,15 +16,15 @@
     gap: 12px;
 }
 .search-bar input{
-    height: 50px;
-    border-radius: 40px;
-    padding-left: 25px;
     color: #808080;
+    border-radius: 20px;
+    text-align: center;
     background-color: #ffffff;
-    font-size: 18px;
+    font-family: Raleway;
+    font-size: 20spx;
 }
 .generic_text{
   font-family: Raleway;
-  color: black;
+  color: rgb(255, 255, 255);
   font-size: 20px;
 }
