--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
-.button_disabled_override:disabled{
+.button_disabled_override:disabled{ /*Overrides button disabled visuals to improve visibility*/
   background-color: #7c7c7c !important; 
   color: rgb(255, 255, 255) !important;           
   border-color: #ffffff !important;    
