--- a/src/components/Intake.css
+++ b/src/components/Intake.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
-.calorie_intake_box{
+.calorie_intake_box{ /*Covers entire component*/
   place-self: center;
   display:flex;
   flex-direction: column;
   align-items: center;
 }
-.intake_text{
+.title_text{ /*Component title*/
   font-family: Raleway;
   color: rgb(255, 255, 255);
   font-size: 30px;
@@ -19,7 +19,7 @@
     background-color: #ffffff;
     font-size: 15px;
 }
-.calories_gained{
+.generic_text{
   font-family: Raleway;
   color: rgb(255, 255, 255);
   font-size: 20px;
